# jose

./: .gitignore  Cargo.toml  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  deny.toml  rust-toolchain.toml
.github/workflows/: crates-release.yml  fuzz.yml  protobuf-ci.yml  readiness.yml  release-preflight.yml  rust-ci.yml
conformance/: README.md
conformance/requirements/: jose.json
conformance/vectors/: jwe-compact.json  jws-compact.json  manifest.json  panva-jose.json  signed-jwt.json  unsigned-jwt.json
crates/: Cargo.toml  NOTICE  README.md
crates/proto/jose/: Cargo.toml  NOTICE  README.md
crates/proto/jose/proto/reallyme/jose/v1/: jose.proto
crates/proto/jose/src/: generated.rs  lib.rs
crates/proto/jose/tests/: generated_tests.rs
crates/src/: lib.rs  wire.rs
crates/src/jwe/: decrypt.rs  derive_key.rs  encrypt.rs  error.rs  mod.rs  parse_compact.rs  validate_header.rs
crates/src/jws/: mod.rs  parse_compact.rs  parse_header.rs  sign.rs  verify.rs
crates/src/jws/suites/: eddsa.rs  es256.rs  mod.rs
crates/src/jwt/: alg.rs  error.rs  mod.rs  parse_compact.rs  select_algorithm.rs  sign.rs  strict_json.rs  unsigned.rs  validate_header.rs  validate_temporal_claims.rs  verify.rs
crates/src/jwt/claims/: any.rs  deserialize_audience.rs  mod.rs  registered.rs
crates/src/jwt/datatype/: mod.rs  numeric_date.rs  string_or_uri.rs
crates/tests/: gen_vectors.rs  jwe_tests.rs  jws_eddsa_tests.rs  jws_es256_tests.rs  jws_vectors.rs  jwt.rs  jwt_vectors.rs  panva_vectors.rs  wire_tests.rs
crates/tests/jwt_suite/: claims_tests.rs  datatype_tests.rs  signed_eddsa_tests.rs  signed_es256_tests.rs  signed_es256k_tests.rs  signed_header_policy_tests.rs  signed_reject_tests.rs  support.rs  temporal_validation_tests.rs  test_keys.rs  unsigned_reject_tests.rs  unsigned_tests.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/compact_jwe/: direct-a128gcm
fuzz/corpus/compact_jwe_ecdh_es/: p256-a128gcm
fuzz/corpus/compact_jws_es256/: es256-valid
fuzz/corpus/signed_jwt/: es256-valid
fuzz/corpus/unsigned_jwt/: none-valid
fuzz/corpus/wire_process/: json-missing-operation
fuzz/dictionaries/: jose.dict
fuzz/fuzz_targets/: compact_jwe.rs  compact_jwe_ecdh_es.rs  compact_jws_es256.rs  signed_jwt.rs  support.rs  unsigned_jwt.rs  wire_process.rs
scripts/: check_release_readiness.mjs  publish_crates_in_order.mjs
tools/panva-goldens/: generate.mjs  package-lock.json  package.json
tools/vector-audit/: Cargo.toml
tools/vector-audit/src/: main.rs
