# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = ["crates"]
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/reallyme/jose"
publish = false

[workspace.dependencies]
reallyme-codec = { version = "0.1.1", default-features = false }
reallyme-crypto = { version = "0.1.6", default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
zeroize = "1.8"
getrandom02 = { package = "getrandom", version = "0.2.17", features = ["js"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
large_include_file = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
wildcard_imports = "deny"
