# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

# Coverage-guided fuzzing harnesses for JOSE's untrusted compact parsers.
#
# This crate is deliberately outside the main workspace so libFuzzer's
# `#![no_main]` runtime and unsafe internals do not inherit production lint
# denies from the release crate.

[package]
name = "jose-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
reallyme-jose = { path = "../crates", features = ["native", "wire"] }
reallyme-crypto = { version = "0.1.6", default-features = false, features = ["jwk"] }
serde_json = "1.0"

[[bin]]
name = "compact_jwe"
path = "fuzz_targets/compact_jwe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compact_jwe_ecdh_es"
path = "fuzz_targets/compact_jwe_ecdh_es.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compact_jws_es256"
path = "fuzz_targets/compact_jws_es256.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signed_jwt"
path = "fuzz_targets/signed_jwt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "unsigned_jwt"
path = "fuzz_targets/unsigned_jwt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wire_process"
path = "fuzz_targets/wire_process.rs"
test = false
doc = false
bench = false

[workspace]
