# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-jose-vector-audit"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
publish = false

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
p256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[workspace]
